hugo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo
  labels:
    app: hugo
spec:
  selector:
    matchLabels:
      app: hugo
  template:
    metadata:
      labels:
        app: hugo
    spec:
      containers:
      - name: hugo
        image: ynos999/hugo-dezool
        ports:
        - containerPort: 80
