hugo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo
  labels:
    app: hugo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 1313  # šeit jānokļūst uz konteinera 1313 portu
  selector:
    app: hugo
